<resources>
    <string name="app_name">Dark Horse</string>
    <string name="search_hint">Search or Enter Url</string>
    <string name="top_site1">google</string>
    <string name="top_site2">Facebook</string>
    <string name="top_site3">Youtube</string>
    <string name="top_site4">Yahoo</string>
    <string name="top_site5">Twitter</string>
    <string name="top_site6">Amazon</string>
    <string name="top_site7">Snapchat</string>
    <string name="top_site8">Instagram</string>
    <string name="top_site9">Duck..go</string>
    <string name="top_site">Blank</string>
    <string name="addmore">add (+)</string>
    <string name="input_url">Please enter a web address or url</string>
    <string name="bck_text">You\'re already on Home Page.</string>
    <string name="title_activity_settings_app">settings_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reload">Reloading…</string>
    <string name="umsg">Please update your app…</string>
    <string name="msg_url">Please input url…</string>
    <string name="exit_text">Window Closing…</string>
    <string name="content_description">Window Closing…</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>