<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3d3d5c"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:ems="14"
        android:hint="@string/search_hint"
        android:inputType="textMultiLine"
        android:paddingLeft="80dp" />

    <Button
        android:id="@+id/search_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/search" />

    <Button
        android:id="@+id/search"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/go" />

    <Button
        android:id="@+id/snapchatBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="250dp"
        android:padding="20dp"
        android:text="@string/top_site7"
        android:textColor="#000"
        android:background="#ffff1a"/>

    <Button
        android:id="@+id/instagramBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="250dp"
        android:padding="20dp"
        android:text="@string/top_site8"
        android:textColor="#000"
        android:background="#fff" />

    <Button
        android:id="@+id/duck_duck_goBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="250dp"
        android:padding="20dp"
        android:text="@string/top_site9"
        android:textColor="#000"
        android:background="#ffdd99" />

    <Button
        android:id="@+id/yahooBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="350dp"
        android:padding="20dp"
        android:text="@string/top_site4"
        android:textColor="#fff"
        android:background="#3333cc"/>

    <Button
        android:id="@+id/twitterBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="350dp"
        android:padding="20dp"
        android:text="@string/top_site5"
        android:textColor="#fff"
        android:background="#3399ff" />

    <Button
        android:id="@+id/amazonBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="350dp"
        android:padding="20dp"
        android:text="@string/top_site6"
        android:textColor="#fff"
        android:background="#ff8c00" />


    <Button
        android:id="@+id/googleBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="450dp"
        android:padding="20dp"
        android:text="@string/top_site1"
        android:textColor="#fff"
        android:background="#ff1a1a"/>

    <Button
        android:id="@+id/facebookBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="450dp"
        android:padding="20dp"
        android:text="@string/top_site2"
        android:textColor="#fff"
        android:background="#004080" />

    <Button
        android:id="@+id/youtubeBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="450dp"
        android:padding="20dp"
        android:text="@string/top_site3"
        android:textColor="#fff"
        android:background="#ff1a1a"/>


    <Button
        android:id="@+id/backward"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/exit"
        android:padding="20dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/reload"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/reload"
        android:padding="20dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/home"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/home"
        android:padding="20dp"
        android:textColor="#000" />


    <Button
        android:id="@+id/bookmark"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/book"
        android:padding="50dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/forward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/forward"
        android:padding="20dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/settings"
        android:padding="20dp"
        android:textColor="#000" />


</RelativeLayout>